--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "connect-mongo": "^0.4.2",
     "cookie-parser": "^1.3.3",
     "csso": "^1.3.11",
+    "cloudinary": "",
     "errorhandler": "^1.3.0",
     "express": "^4.10.6",
     "express-flash": "^0.0.2",
