--- a/package.json
+++ b/package.json
@@ -65,5 +65,9 @@
     "mocha": "^2.0.1",
     "multiline": "^1.0.1",
     "supertest": "^0.15.0"
+  },
+  "engines": {
+    "node": "0.12.1",
+    "npm": "2.5.1"
   }
 }
