--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "lodash": "^2.4.1",
     "lusca": "^1.0.2",
     "method-override": "^2.3.0",
-    "mongoose": "^3.8.20",
+    "mongoose": "^3.8",
     "morgan": "^1.5.0",
     "node-foursquare": "^0.2.1",
     "node-linkedin": "^0.3.4",
@@ -65,5 +65,9 @@
     "mocha": "^2.0.1",
     "multiline": "^1.0.1",
     "supertest": "^0.15.0"
+  },
+  "engines": {
+    "node": "0.12.1",
+    "npm": "2.5.1"
   }
 }
