--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "cookie-parser": "^1.3.3",
     "csso": "^1.3.11",
     "cloudinary": "",
-    "multer": "",
+    "multer": "^0.1.8",
     "errorhandler": "^1.3.0",
     "express": "^4.10.6",
     "express-flash": "^0.0.2",
@@ -65,9 +65,9 @@
     "mocha": "^2.0.1",
     "multiline": "^1.0.1",
     "supertest": "^0.15.0"
-  },
+  }/*,
   "engines": {
     "node": "0.12.1",
     "npm": "2.5.1"
-  }
+  }*/
 }
